[gd_scene load_steps=7 format=2]

[ext_resource path="res://Snake.tscn" type="PackedScene" id=1]
[ext_resource path="res://Boundary.tscn" type="PackedScene" id=2]
[ext_resource path="res://World.gd" type="Script" id=3]
[ext_resource path="res://Door.tscn" type="PackedScene" id=4]
[ext_resource path="res://WallBlock.tscn" type="PackedScene" id=5]
[ext_resource path="res://BigWallBlock.tscn" type="PackedScene" id=6]

[node name="World" type="Node2D"]
script = ExtResource( 3 )

[node name="Snake" parent="." instance=ExtResource( 1 )]

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="SnakeSize" type="Label" parent="CanvasLayer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 88.0
margin_bottom = 19.0
text = "Snake size: 5"

[node name="Label" type="Label" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -111.0
margin_top = -24.0
margin_right = 111.0
margin_bottom = 24.0
text = "You died.
Press 'R' to restart game.
Press 'U' to go to upgrade menu."
align = 1
valign = 1

[node name="RedColor" type="Label" parent="CanvasLayer"]
visible = false
margin_left = 5.0
margin_top = 495.0
margin_right = 45.0
margin_bottom = 509.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Red: 0"

[node name="GreenColor" type="Label" parent="CanvasLayer"]
visible = false
margin_left = 5.0
margin_top = 479.0
margin_right = 60.0
margin_bottom = 493.0
custom_colors/font_color = Color( 0, 1, 0, 1 )
text = "Green: 0"

[node name="BlueColor" type="Label" parent="CanvasLayer"]
visible = false
margin_left = 5.0
margin_top = 463.0
margin_right = 60.0
margin_bottom = 477.0
custom_colors/font_color = Color( 0, 0, 1, 1 )
text = "Blue: 0"

[node name="Rooms" type="Node2D" parent="."]

[node name="Room1" parent="Rooms" instance=ExtResource( 2 )]

[node name="Room2" parent="Rooms" instance=ExtResource( 2 )]
position = Vector2( -512, 0 )

[node name="Room3" parent="Rooms" instance=ExtResource( 2 )]
position = Vector2( -512, -512 )

[node name="Room4" parent="Rooms" instance=ExtResource( 2 )]
position = Vector2( -1024, -512 )

[node name="Room5" parent="Rooms" instance=ExtResource( 2 )]
position = Vector2( -1024, 0 )

[node name="Doors" type="Node2D" parent="."]

[node name="Door" parent="Doors" instance=ExtResource( 4 )]
position = Vector2( -256, 0 )

[node name="Door2" parent="Doors" instance=ExtResource( 4 )]
position = Vector2( -512, -256 )
door_size = 20

[node name="Door6" parent="Doors" instance=ExtResource( 4 )]
position = Vector2( -512, 256 )
door_size = 100

[node name="Door4" parent="Doors" instance=ExtResource( 4 )]
position = Vector2( -1024, -256 )
door_size = 60

[node name="Door5" parent="Doors" instance=ExtResource( 4 )]
position = Vector2( -768, 0 )
door_size = 80

[node name="Door3" parent="Doors" instance=ExtResource( 4 )]
position = Vector2( -768, -512 )
door_size = 40

[node name="WallBlock" parent="Doors" instance=ExtResource( 5 )]
position = Vector2( 0, -256 )

[node name="WallBlock2" parent="Doors" instance=ExtResource( 5 )]
position = Vector2( -256, -512 )

[node name="WallBlock3" parent="Doors" instance=ExtResource( 5 )]
position = Vector2( -512, -768 )

[node name="WallBlock4" parent="Doors" instance=ExtResource( 5 )]
position = Vector2( -1024, -768 )

[node name="WallBlock6" parent="Doors" instance=ExtResource( 5 )]
position = Vector2( -1280, -512 )

[node name="WallBlock7" parent="Doors" instance=ExtResource( 5 )]
position = Vector2( -1280, 0 )

[node name="WallBlock8" parent="Doors" instance=ExtResource( 5 )]
position = Vector2( -1024, 256 )

[node name="WallBlock5" parent="Doors" instance=ExtResource( 5 )]
position = Vector2( 256, 0 )

[node name="WallBlock10" parent="Doors" instance=ExtResource( 5 )]
position = Vector2( 0, 256 )

[node name="ExtraWalls" type="Node2D" parent="."]

[node name="WallBlock14" parent="ExtraWalls" instance=ExtResource( 5 )]
position = Vector2( -576, -64 )

[node name="WallBlock23" parent="ExtraWalls" instance=ExtResource( 5 )]
position = Vector2( -1024, -576 )

[node name="WallBlock24" parent="ExtraWalls" instance=ExtResource( 5 )]
position = Vector2( -1024, -448 )

[node name="WallBlock25" parent="ExtraWalls" instance=ExtResource( 5 )]
position = Vector2( -1088, -512 )

[node name="WallBlock26" parent="ExtraWalls" instance=ExtResource( 5 )]
position = Vector2( -960, -512 )

[node name="WallBlock15" parent="ExtraWalls" instance=ExtResource( 5 )]
position = Vector2( -816, 112 )

[node name="WallBlock16" parent="ExtraWalls" instance=ExtResource( 5 )]
position = Vector2( -912, 208 )

[node name="WallBlock17" parent="ExtraWalls" instance=ExtResource( 5 )]
position = Vector2( -1136, 208 )

[node name="WallBlock18" parent="ExtraWalls" instance=ExtResource( 5 )]
position = Vector2( -1232, 112 )

[node name="WallBlock19" parent="ExtraWalls" instance=ExtResource( 5 )]
position = Vector2( -1232, -112 )

[node name="WallBlock20" parent="ExtraWalls" instance=ExtResource( 5 )]
position = Vector2( -1136, -208 )

[node name="WallBlock21" parent="ExtraWalls" instance=ExtResource( 5 )]
position = Vector2( -912, -208 )

[node name="WallBlock22" parent="ExtraWalls" instance=ExtResource( 5 )]
position = Vector2( -816, -112 )

[node name="WallBlock13" parent="ExtraWalls" instance=ExtResource( 5 )]
position = Vector2( -448, -64 )

[node name="WallBlock11" parent="ExtraWalls" instance=ExtResource( 5 )]
position = Vector2( -576, 64 )

[node name="WallBlock12" parent="ExtraWalls" instance=ExtResource( 5 )]
position = Vector2( -448, 64 )

[node name="BigWallBlock" parent="ExtraWalls" instance=ExtResource( 6 )]
position = Vector2( -616, -408 )

[node name="BigWallBlock2" parent="ExtraWalls" instance=ExtResource( 6 )]
position = Vector2( -408, -408 )

[node name="BigWallBlock3" parent="ExtraWalls" instance=ExtResource( 6 )]
position = Vector2( -408, -616 )

[node name="BigWallBlock4" parent="ExtraWalls" instance=ExtResource( 6 )]
position = Vector2( -616, -616 )

[node name="BigWallBlock5" parent="ExtraWalls" instance=ExtResource( 6 )]
position = Vector2( -840, -184 )

[node name="BigWallBlock6" parent="ExtraWalls" instance=ExtResource( 6 )]
position = Vector2( -1208, -184 )

[node name="BigWallBlock7" parent="ExtraWalls" instance=ExtResource( 6 )]
position = Vector2( -1208, 184 )

[node name="BigWallBlock8" parent="ExtraWalls" instance=ExtResource( 6 )]
position = Vector2( -840, 184 )

[node name="BigWallBlock10" parent="ExtraWalls" instance=ExtResource( 6 )]
position = Vector2( -872, -664 )

[node name="BigWallBlock11" parent="ExtraWalls" instance=ExtResource( 6 )]
position = Vector2( -1176, -664 )

[node name="BigWallBlock12" parent="ExtraWalls" instance=ExtResource( 6 )]
position = Vector2( -1176, -360 )

[node name="BigWallBlock13" parent="ExtraWalls" instance=ExtResource( 6 )]
position = Vector2( -872, -360 )

[connection signal="death" from="Snake" to="." method="_on_Snake_death"]
[connection signal="move_camera" from="Snake" to="." method="_on_Snake_move_camera"]
